修改步骤详情页的显示样式

--- a/Web/LocalCSS/DataVerify/DataVerify.css
+++ b/Web/LocalCSS/DataVerify/DataVerify.css
@@ -9,6 +9,8 @@ table{
 }
 .details{
     width:33%;
+    height:100%;
+    overflow-y:scroll;
     margin:auto;
     background:lightskyblue;
     padding:10px;
